Changed Lists to Sets and added /api prefix